WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134791
REGRESSION(
r170858
): Safari freezes upon making a search on a website (yelp.com)
https://bugs.webkit.org/show_bug.cgi?id=134791
Summary
REGRESSION(r170858): Safari freezes upon making a search on a website (yelp.com)
Enrica Casucci
Reported
2014-07-09 19:08:10 PDT
<
rdar://problem/17616971
>
Attachments
Patch
(1.64 KB, patch)
2014-07-09 19:13 PDT
,
Enrica Casucci
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2014-07-09 19:13:01 PDT
Created
attachment 234682
[details]
Patch
Enrica Casucci
Comment 2
2014-07-09 19:19:09 PDT
Committed revision 170948.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug