REGRESSION(r170858): Safari freezes upon making a search on a website (yelp.com). https://bugs.webkit.org/show_bug.cgi?id=134791 <rdar://problem/17616971>

Reviewed by Benjamin Poulain.

After r170858 we notify the keyboard too often about
the changed selection. This patch removes the notification
until we find a better way to do it that doesn't cause
deadlocks.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _selectionWillChange]):
(-[WKContentView _selectionChanged]):



Canonical link: https://commits.webkit.org/152734@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170948 268f45cc-cd09-0410-ab3c-d52691b4dbfc